B-68612 Tech Debt: FDA: replace Arrays.asList() by List.of() in dist-foreign-repository package