@@ -7,7 +7,6 @@ import org.apache.commons.lang3.StringUtils;
 
 import java.io.OutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -23,7 +22,7 @@ public class AclLiabilitiesByRhCsvReportHandler
     extends AclCommonCalculationsCsvReportHandler<AclLiabilitiesByRhReportDto> {
 
     private static final List<String> HEADERS =
-        Arrays.asList("RH Account #", "RH Name", "Print Payee Account #", "Print Payee Account Name",
+        List.of("RH Account #", "RH Name", "Print Payee Account #", "Print Payee Account Name",
             "Digital Payee Account #", "Digital Payee Account Name", "Gross Amount", "Net Amount", "Print Net Amount",
             "Digital Net Amount", "ACL Net Amount", "MACL Net Amount", "VGW Net Amount", "JACDCL Net Amount");
 
@@ -38,7 +37,7 @@ public class AclLiabilitiesByRhCsvReportHandler
 
     @Override
     public void writeTotals(AclReportTotalAmountsDto totalAmountsDto) {
-        writeStringRow(Arrays.asList("Grand Total", StringUtils.EMPTY, StringUtils.EMPTY, StringUtils.EMPTY,
+        writeStringRow(List.of("Grand Total", StringUtils.EMPTY, StringUtils.EMPTY, StringUtils.EMPTY,
             StringUtils.EMPTY, StringUtils.EMPTY, getBeanBigDecimal(totalAmountsDto.getGrossAmount()),
             getBeanBigDecimal(totalAmountsDto.getNetAmount()),
             getBeanBigDecimal(totalAmountsDto.getPrintNetAmount()),
