@@ -106,7 +106,7 @@ public class RightsholderRepositoryIntegrationTest {
         Set<Long> accountNumbers = rightsholderRepository.findAccountNumbers();
         assertEquals(13, accountNumbers.size());
         assertTrue(accountNumbers.containsAll(
-            Arrays.asList(7000813806L, 2000017004L, 2000017010L, 1000009997L, 1000002859L, 1000005413L, 1000159997L,
+            List.of(7000813806L, 2000017004L, 2000017010L, 1000009997L, 1000002859L, 1000005413L, 1000159997L,
                 7000800832L, 7001555529L, 2000105646L, 2580011451L, 1000002854L, 1000028511L)));
     }
 
@@ -141,9 +141,9 @@ public class RightsholderRepositoryIntegrationTest {
         assertTrue(CollectionUtils.isNotEmpty(rros));
         assertEquals(4, rros.size());
         assertTrue(rros.stream().map(Rightsholder::getAccountNumber).collect(Collectors.toList())
-            .containsAll(Arrays.asList(7000813806L, 2000017004L, 2000017010L, 7000800832L)));
+            .containsAll(List.of(7000813806L, 2000017004L, 2000017010L, 7000800832L)));
         assertTrue(rros.stream().map(Rightsholder::getId).collect(Collectors.toList())
-            .containsAll(Arrays.asList("05c4714b-291d-4e38-ba4a-35307434acfb",
+            .containsAll(List.of("05c4714b-291d-4e38-ba4a-35307434acfb",
                 "46754660-b627-46b9-a782-3f703b6853c7", "ff8b9ac9-5fca-4d57-b74e-26da209c1040",
                 "05c4714b-291d-4e38-ba4a-35307434acfb")));
         assertTrue(rros.stream().map(Rightsholder::getName).collect(Collectors.toList())
