@@ -11,7 +11,6 @@ import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.IntStream;
 
@@ -34,9 +33,8 @@ public class UdmPriceTypeRepositoryIntegrationTest {
 
     @Test
     public void testFindAllPriceTypes() {
-        List<String> expectedPriceTypes =
-            Arrays.asList("Individual", "Institution", "Corporate Tiered pricing", "List Price", "Open Access",
-                "Free to Qualified", "Cost of Membership", "Per-Article price", "Other (Add to Price Note)");
+        List<String> expectedPriceTypes = List.of("Individual", "Institution", "Corporate Tiered pricing", "List Price",
+            "Open Access", "Free to Qualified", "Cost of Membership", "Per-Article price", "Other (Add to Price Note)");
         List<String> actualPriceTypes = udmPriceTypeRepository.findAllPriceTypes();
         assertEquals(expectedPriceTypes.size(), actualPriceTypes.size());
         IntStream.range(0, expectedPriceTypes.size())
@@ -45,7 +43,7 @@ public class UdmPriceTypeRepositoryIntegrationTest {
 
     @Test
     public void testFindAllAccessPriceTypes() {
-        List<String> expectedPriceAccessTypes = Arrays.asList("Print", "Digital", "Combined - only option");
+        List<String> expectedPriceAccessTypes = List.of("Print", "Digital", "Combined - only option");
         List<String> actualPriceAccessTypes = udmPriceTypeRepository.findAllPriceAccessTypes();
         assertEquals(expectedPriceAccessTypes.size(), actualPriceAccessTypes.size());
         IntStream.range(0, expectedPriceAccessTypes.size())
